revision profile_new

--- a/app/views/editorial/_tramenu_login.html.erb
+++ b/app/views/editorial/_tramenu_login.html.erb
@@ -1,7 +1,9 @@
 <% if User.current && User.current.logged? %>
     <p class="fs-tramenu-blockheader x-granata">Utente:&nbsp; <%= User.current.name() %></p>
     <div class="fs-blockcontent fs-logged1">
-      <%= gravatar_for(User.current) unless !User.current %>
+
+      <%# gravatar_for(User.current) unless !User.current %>
+         <%= User.current.user_profile.my_avatar(:xs) %>
       <ul>
         <% if User.current && User.current.canbackend? %>
             <li>
