--- a/app/views/editorial/profilo_new.html.erb
+++ b/app/views/editorial/profilo_new.html.erb
@@ -1,8 +1,34 @@
 <%# form_for :user_profile, @user_profile, :url => {:controller=> 'user_profiles', :action => "pcreate"} ,:html => { :multipart => true } do |f| %>
-
+<style>
+    .thumb {
+        height: 120px;
+        border: 1px solid #ededed;
+        margin: 10px 5px 0 0;
+    }
+</style>
 <% form_for :user_profile, @user_profile, :url => {:action => "profilo_create"}, :html => {:multipart => true} do |f| %>
     <%= f.hidden_field :user_id, :value => params[:id] %>
     <div class="fs-profiles-sx">
+      <div id="fs-photo-edit">
+        <% if :use_gravatar == 1 %>
+            <%= '<div id="fs-photo-edit-i"></div><div id="fs-photo-edit-g" style="display:block;">' + gravatar_for( @this_user , :size => 120) + ' </div>' %>
+        <% else %>
+            <%= '<div id="fs-photo-edit-i"></div><div id="fs-photo-edit-g" style="display:none;">' + gravatar_for( @this_user , :size => 120) + ' </div>' %>
+        <% end %>
+      </div>
+
+      <%# image_tag @user_profile.photo.url(:l) %>
+
+      <div class="fs-vuoto-inline-button  fs-profiles-esx-btn">
+        <label><%= f.radio_button :use_gravatar, true, :onchange => "funct_avatar('g')" %> <%= 'Usa mail su Gravatar' %></label><br/>
+        <label><%= f.radio_button :use_gravatar, false, :onchange => "funct_avatar('a')" %> <%= 'Usa tua immagine Avatar' %></label><br/>
+        <%= f.file_field :photo, :onchange => "handleFileSelect('handleFileSelect, false'})" %>
+      </div>
+    </div>
+
+
+  <!--
+
       <p>
         <%= f.label :photo %>
         <%= f.file_field :photo %>
@@ -18,6 +44,7 @@
         <%= f.text_field :fs_qualifica %>
       </p>
     </div>
+    -->
     <div class="fs-profiles-cx">
       <p>
         <%= f.label :fs_tel %><br/>
@@ -75,3 +102,53 @@
 <%= wikitoolbar_for 'user_profile_curriculum' %>
 <%= wikitoolbar_for 'curriculum' %>
 
+
+<script>
+    // valori accettati 1= Immagine Avatar Papareclip , 0 = Immagine Gravatar , 2  = Nuova immagine upload
+    function funct_avatar(val) {
+        if (val == 'g') {
+            document.getElementById('fs-photo-edit-i').style.display = 'none';
+            document.getElementById('fs-photo-edit-a').style.display = 'none';
+            document.getElementById('fs-photo-edit-g').style.display = 'block';
+        }
+        else if (val == 'i') {
+            document.getElementById('fs-photo-edit-i').style.display = 'block';
+            document.getElementById('fs-photo-edit-a').style.display = 'none';
+            document.getElementById('fs-photo-edit-g').style.display = 'none';
+            document.getElementById('use_gravatar_false').checked = true;
+            document.getElementById('use_gravatar_true').checked = false;
+            document.getElementById('use_gravatar_false').setAttribute('checked', 'checked');
+        }
+
+    }
+    function handleFileSelect(evt) {
+        var files = evt.target.files; // FileList object
+        // Loop through the FileList and render image files as thumbnails.
+        for (var i = 0, f; f = files[i]; i++) {
+
+            // Only process image files.
+            if (!f.type.match('image.*')) {
+                continue;
+            }
+
+            var reader = new FileReader();
+
+            // Closure to capture the file information.
+            reader.onload = (function (theFile) {
+                return function (e) {
+                    // Render thumbnail.
+                    // var span = document.createElement('span');
+                    var span = document.getElementById('fs-photo-edit-i');
+                    span.innerHTML = ['<img class="thumb" src="', e.target.result,
+                        '" title="', escape(theFile.name), '"/>'].join('');
+                    document.getElementById('fs-photo-edit-i').insertBefore(span, null);
+                };
+            })(f);
+
+            // Read in the image file as a data URL.
+            reader.readAsDataURL(f);
+        }
+        funct_avatar('i');
+    }
+    document.getElementById('photo').addEventListener('change', handleFileSelect, false);
+</script>
