--- a/app/views/editorial/profilo_show.html.erb
+++ b/app/views/editorial/profilo_show.html.erb
@@ -30,11 +30,11 @@
           <div class="fs-profiles-bt">
           <p class="fs-profiles-labels">Titoli </p>
 
-          <p><%= h @user_profile.titoli %></p>
+          <p><%= textilizable @user_profile.titoli %></p>
 
           <p class="fs-profiles-labels"> Curriculum </p>
 
-          <p><%= h @user_profile.curriculum %></p>
+          <p><%= textilizable @user_profile.curriculum %></p>
           </div>
         </article>
         <br/>&nbsp; <br/>
