--- a/app/views/editorial/profilo_new.html.erb
+++ b/app/views/editorial/profilo_new.html.erb
@@ -1,4 +1,4 @@
-<%# form_for :user_profile, @user_profile, :url => {:controller=> 'user_profiles', :action => "pcreate"} ,:html => { :multipart => true } do |f| %>
+<%# form_tag({:action => :update}, {:method => :put})form_tag({:action => controller.action_name, :id => @project, :path => to_path_param(@path), :rev => ''}, {:method => :get, :id => 'revision_selector'}) do -%>
 <style>
     .thumb {
         height: 120px;
@@ -6,102 +6,90 @@
         margin: 10px 5px 0 0;
     }
 </style>
-<% form_for :user_profile, @user_profile, :url => {:action => "profilo_create"}, :html => {:multipart => true} do |f| %>
-    <%= f.hidden_field :user_id, :value => params[:id] %>
-    <div class="fs-profiles-sx">
+
+<% form_tag({:action => "profilo_new",  :method => :post}, :multipart => true) do %>
+    <%= hidden_field_tag :user_id, @this_user.id %>
+    <div class="fs-profiles-esx">
       <div id="fs-photo-edit">
-        <% if :use_gravatar == 1 %>
-            <%= '<div id="fs-photo-edit-i"></div><div id="fs-photo-edit-g" style="display:block;">' + gravatar_for( @this_user , :size => 120) + ' </div>' %>
-        <% else %>
-            <%= '<div id="fs-photo-edit-i"></div><div id="fs-photo-edit-g" style="display:none;">' + gravatar_for( @this_user , :size => 120) + ' </div>' %>
-        <% end %>
+            <%= '<div id="fs-photo-edit-i"></div><div id="fs-photo-edit-a" style="display:none;"></div>
+          <div id="fs-photo-edit-g" style="display:block;">' + gravatar_for(@this_user, :size => 120) + ' </div>' %>
+
       </div>
 
       <%# image_tag @user_profile.photo.url(:l) %>
-
+     <%= " id > " + @this_user.id.to_s  %>
       <div class="fs-vuoto-inline-button  fs-profiles-esx-btn">
-        <label><%= f.radio_button :use_gravatar, true, :onchange => "funct_avatar('g')" %> <%= 'Usa mail su Gravatar' %></label><br/>
-        <label><%= f.radio_button :use_gravatar, false, :onchange => "funct_avatar('a')" %> <%= 'Usa tua immagine Avatar' %></label><br/>
-        <%= f.file_field :photo, :onchange => "handleFileSelect('handleFileSelect, false'})" %>
+        <label><%= radio_button_tag :use_gravatar, true,  :onchange => "funct_avatar('g')" %> <%= 'Usa mail su Gravatar' %></label><br/>
+        <label><%= radio_button_tag :use_gravatar, false, :onchange => "funct_avatar('a')" %> <%= 'Usa tua immagine Avatar' %></label><br/>
+        <%= file_field_tag :photo, :onchange => "handleFileSelect('handleFileSelect, false'})" %>
       </div>
     </div>
-
-
-  <!--
-
+    <div class="fs-profiles-ecx">
       <p>
-        <%= f.label :photo %>
-        <%= f.file_field :photo %>
+        <%= label_tag :fs_qualifica %><br/>
+        <%= text_field_tag :fs_qualifica %>
       </p>
 
       <p>
-        <label><%= f.radio_button :use_gravatar, true %> <%= 'Usa mail su Gravatar' %></label><br/>
-        <label><%= f.radio_button :use_gravatar, false %> <%= 'Usa tua immagine Avatar' %></label><br/>
+        <%= label_tag :fs_tel %><br/>
+        <%= text_field_tag :fs_te %>
       </p>
 
       <p>
-        <%= f.label :fs_qualifica %><br/>
-        <%= f.text_field :fs_qualifica %>
-      </p>
-    </div>
-    -->
-    <div class="fs-profiles-cx">
-      <p>
-        <%= f.label :fs_tel %><br/>
-        <%= f.text_field :fs_tel %>
+        <%= label_tag :fs_fax %><br/>
+        <%= text_field_tag :fs_fax %>
       </p>
 
       <p>
-        <%= f.label :fs_fax %><br/>
-        <%= f.text_field :fs_fax %>
+        <%= label_tag :fs_skype %><br/>
+        <%= text_field_tag :fs_skype %>
       </p>
 
       <p>
-        <%= f.label :fs_skype %><br/>
-        <%= f.text_field :fs_skype %>
+        <%= label_tag :fs_mail %><br/>
+        <%= text_field_tag :fs_mail %>
       </p>
 
       <p>
-        <%= f.label :fs_mail %><br/>
-        <%= f.text_field :fs_mail %>
-      </p>
-
-      <p>
-        <%= f.label :external_url %><br/>
-        <%= f.text_field :external_url %>
+        <%= label_tag :fs_external_url %><br/>
+        <%= text_field_tag :external_url %>
       </p>
     </div>
-    <div class="fs-profiles-dx">
-        <div>
-          <b> Mostra in ... </b> &nbsp;<br/>
-          <label><%= f.radio_button :display_in, 1 %> <%= 'Collaboratori' %></label><br/>
-          <label><%= f.radio_button :display_in, 2 %> <%= 'Responsabili' %></label><br/>
-          <label><%= f.radio_button :display_in, 3 %> <%= 'Direttori' %></label> <br/>
-          <label><%= f.radio_button :display_in, 4 %> <%= 'Non Visibile' %></label><br/>
-          <br/> &nbsp;
-        </div>
-        <p>  <%= submit_tag "crea", :class => "fs-rosso-button" %></p>
+    <div class="fs-profiles-edx">
+
+      <div class="fs-profiles-radio-buttons">
+        <%= label_tag l(:label_display_in) %> &nbsp;<br/>
+        <label><%= radio_button_tag :display_in, 1  %> <%= 'Collaboratori' %></label><br/>
+        <label><%= radio_button_tag :display_in, 2 %> <%= 'Responsabili' %></label><br/>
+        <label><%= radio_button_tag :display_in, 3 %> <%= 'Direttori' %></label><br/>
+        <label><%= radio_button_tag :display_in, 4 %> <%= 'Non Visibile' %></label><br/>
 
       </div>
-      <div class="cleared"></div>
-      <p>
+      <p style="padding:5px 0;"></p>
 
-      <p><%= f.text_area :titoli,
-                         :cols => 20,
-                         :rows => 5,
-                         :accesskey => accesskey(:edit),
-                         :class => 'wiki-edit' %>
-      </p>
+      <p>  <%= submit_tag "crea", :action => 'profilo_edit', :class => "fs-giallo-button" %></p>
 
-      <p>
-        <%= f.label l(:label_curriculum) %><br/>
-        <%= f.text_area :curriculum %>
-      </p>
+      <p style="padding:5px 0;"> altrimenti</p>
+
+      <p>  <%= link_to "annulla", :back, :class => "fs-giallo-button", :style => "float:none;" %></p>
+
+    </div>
+    <div class="cleared"></div>
+    <p>
+      <%= label_tag l(:label_titoli) %><br/>
+      <%= text_area_tag :titoli,  :cols => 20, :rows => 4, :class => 'wiki-edit' %>
+    </p>
+
+    <p>
+      <%= label_tag l(:label_curriculum) %><br/>
+      <%= text_area_tag :curriculum, :cols => 20, :rows => 6, :class => 'wiki-edit' %>
+    </p>
+
 
 <% end %>
-<%= wikitoolbar_for 'user_profile_curriculum' %>
-<%= wikitoolbar_for 'curriculum' %>
 
+<%= wikitoolbar_for 'titoli' %>
+<%= wikitoolbar_for 'curriculum' %>
 
 <script>
     // valori accettati 1= Immagine Avatar Papareclip , 0 = Immagine Gravatar , 2  = Nuova immagine upload
@@ -110,6 +98,11 @@
             document.getElementById('fs-photo-edit-i').style.display = 'none';
             document.getElementById('fs-photo-edit-a').style.display = 'none';
             document.getElementById('fs-photo-edit-g').style.display = 'block';
+        }
+        else if (val == 'a') {
+            document.getElementById('fs-photo-edit-i').style.display = 'none';
+            document.getElementById('fs-photo-edit-a').style.display = 'block';
+            document.getElementById('fs-photo-edit-g').style.display = 'none';
         }
         else if (val == 'i') {
             document.getElementById('fs-photo-edit-i').style.display = 'block';
