locale and password management

--- a/app/views/mailer/lost_password.html.erb
+++ b/app/views/mailer/lost_password.html.erb
@@ -2,3 +2,5 @@
 <%= auto_link(@url) %></p>
 
 <p><%= l(:field_login) %>: <b><%=h @token.user.login %></b></p>
+
+<p><%= l(:field_mail) %>: <b><%=h @token.user.mail %></b></p>
