fix gestione dei contenuti in funzione ai permessi utente

--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -144,6 +144,7 @@
     <div class="fs-layout-wrapper clearfix">
       <div class="fs-content-layout">
         <div class="fs-content-layout-row">
+          <%= render_flash_messages %>
           <%= yield %>
         </div>
       </div>
