--- a/app/views/editorial/_articolo_full.html.erb
+++ b/app/views/editorial/_articolo_full.html.erb
@@ -68,7 +68,7 @@
         </div>
         <div class="clearfix">&nbsp; <br/></div>
         <div class="fs-layout-cell layout-item-2">
-          <div id="fs-articolo-full">
+          <div id="fs-articolo-full" class="fs-resize-itm">
             <%= textilizable(@articolo.description) %>
             <br/>
           </div>
