vari fix convegni ed eventi 2

--- a/app/views/editorial/eventi.html.erb
+++ b/app/views/editorial/eventi.html.erb
@@ -96,7 +96,7 @@
                 <div class="clearfix"></div>
                 <div class="fs-layout-cell layout-item-1">
 
-                  <div class="fs-resize-itm">
+                  <div>
                   <%= @conv_prossimo.description %></div>
                 </div>
                 <div class="fs-postmetadata-full-convegni">
