vari fix convegni ed eventi 4

--- a/app/views/editorial/eventi.html.erb
+++ b/app/views/editorial/eventi.html.erb
@@ -92,9 +92,8 @@
                 </div>
                 <div class="clearfix"></div>
                 <div class="fs-layout-cell layout-item-1">
-
-                  <div>
-                  <%= @conv_prossimo.description %></div>
+                  <div id="fs-articolo-full">
+                  <%= @conv_prossimo.description %></div> <br/> &nbsp;
                 </div>
                 <div class="fs-postmetadata-full-convegni">
                   <div class='fs-social'>
