--- a/app/views/editorial/evento.html.erb
+++ b/app/views/editorial/evento.html.erb
@@ -47,8 +47,9 @@
               </div>
               <div class="clearfix"></div>
               <div class="fs-layout-cell layout-item-1">
-
-                <%= @convegno.description %>
+               <div id="fs-articolo-full">
+                <%= @convegno.description %><br/>&nbsp;
+                 </div>
               </div>
               <div class="fs-postmetadata-full-convegni">
                 <div class='fs-social'>
