--- a/app/views/editorial/_articolo_full.html.erb
+++ b/app/views/editorial/_articolo_full.html.erb
@@ -67,8 +67,8 @@
 
         </div>
         <div class="clearfix">&nbsp; <br/></div>
-        <div class="fs-layout-cell layout-item-2">
-          <div id="fs-articolo-full" class="fs-resize-itm">
+        <div class="fs-layout-cell layout-item-1">
+          <div id="fs-articolo-full">
             <%= textilizable(@articolo.description) %>
             <br/>
           </div>
