--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -30,7 +30,7 @@
   <%#= javascript_heads %>
   <%# javascript_include_tag "jquery/jquery-1.8.2.min.js"%>
 
-  <%= javascript_include_tag "jquery.js"%>
+  <%= javascript_include_tag "jquery.js"%> <%#= javascript_include_tag "jquery/jquery-1.7.1.min.js" %>
 
   <%#= javascript_include_tag "jquery/jquery-1.7.1.min.js" %>
   <%# javascript_include_tag "jquery/jquery-1.9.1.min.js" %>
