--- a/app/views/services/condition.html.erb
+++ b/app/views/services/condition.html.erb
@@ -3,25 +3,22 @@
 <head><!-- Created by DomThu & SPecchiaSoft -->
   <meta charset="utf-8"/>
   <title>FiscoSport condizioni di utiliso</title>
-  <%= javascript_include_tag "jquery/jquery-1.8.0.min.js" %>
-  <%= javascript_include_tag "jquery/jquery-ui-1.9.2.custom.min.js" %>
-  <%= stylesheet_link_tag 'jquery/start/jquery-ui-1.9.2.custom.min.css', :media => 'all' %>
   <style>
     .toggler { width: 90%; height: 200px; position: relative; }
-    #button { padding: .5em 1em; text-decoration: none; }
+    #btnCond { padding: .5em 1em; text-decoration: none; }
     #effect { position: relative; }
     .newClass { width: 50%;  padding: 1em; letter-spacing: 0; font-size: 1.0em; margin: 0; }
     .anotherNewClass { text-indent: 40px; letter-spacing: .4em; width: 100%; height: 350px; padding: 30px; margin: 10px; font-size: 1.6em; overflow: scroll; }
     </style>
     <script>
-    $(function() {
-        $( "#button" ).click(function(){
+    $(document).ready(function() {
+        $( "#btnCond" ).click(function(){
             $( ".newClass" ).switchClass( "newClass", "anotherNewClass", 1000 );
             $( ".anotherNewClass" ).switchClass( "anotherNewClass", "newClass", 1000 );
-            if (($("#button").text()) == "Si legge male?")
-              $("#button").text("Forse meglio prima?")
+            if (($("#btnCond").text()) == "Si legge male?")
+              $("#btnCond").text("Forse meglio prima?")
             else
-              $("#button").text("Si legge male?")
+              $("#btnCond").text("Si legge male?")
             return false;
         });
     });
@@ -33,7 +30,7 @@
     <tbody>
       <tr>
         <td>
-          <a href="#" id="button" class="ui-state-default ui-corner-all">Si legge male?</a>
+          <a href="#" id="btnCond" class="ui-state-default ui-corner-all">Si legge male?</a>
         </td>
         <td style="text-align: right;">
           E-mail: <a class="pri" title="Manda una e-mail" href="mailto:segreteria@fiscosport.it"><b>segreteria@fiscosport.it</b></a><br />
