--- a/app/views/services/privacy.html.erb
+++ b/app/views/services/privacy.html.erb
@@ -3,26 +3,25 @@
 <head><!-- Created by DomThu & SPecchiaSoft -->
   <meta charset="utf-8"/>
   <title>FiscoSport privacy</title>
-  <%= javascript_include_tag "jquery/jquery-1.8.0.min.js" %>
-  <%= javascript_include_tag "jquery/jquery-ui-1.9.2.custom.min.js" %>
-  <%= stylesheet_link_tag 'jquery/start/jquery-ui-1.9.2.custom.min.css', :media => 'all' %>
   <style>
     .toggler { width: 90%; height: 200px; position: relative; }
-    #button { padding: .5em 1em; text-decoration: none; }
+    #btnPriv { padding: .5em 1em; text-decoration: none; }
     #effect { position: relative; }
     .newClass { width: 50%;  padding: 1em; letter-spacing: 0; font-size: 1.0em; margin: 0; }
     .anotherNewClass { text-indent: 40px; letter-spacing: .4em; width: 100%; height: 350px; padding: 30px; margin: 10px; font-size: 1.6em; overflow: scroll; }
     </style>
     <script>
-    $(function() {
-        $( "#button" ).click(function(){
+    $(document).ready(function() {
+        $( "#btnPriv" ).click(function(e){
             $( ".newClass" ).switchClass( "newClass", "anotherNewClass", 1000 );
             $( ".anotherNewClass" ).switchClass( "anotherNewClass", "newClass", 1000 );
-            if (($("#button").text()) == "Non vedo bene")
-              $("#button").text("ok, ho capito...")
+            if (($("#btnPriv").text()) == "Non vedo bene")
+              $("#btnPriv").text("ok, ho capito...")
             else
-              $("#button").text("Non vedo bene")
-            return false;
+              $("#btnPriv").text("Non vedo bene")
+            return false; //= e.preventDefault() + e.stopPropagation()
+            //return false from within a jQuery event handler is effectively the same as calling both
+            //e.preventDefault and e.stopPropagation on the passed jQuery.Event object.
         });
     });
     </script>
@@ -33,7 +32,7 @@
     <tbody>
       <tr>
         <td>
-          <a href="#" id="button" class="ui-state-default ui-corner-all">Non vedo bene</a>
+          <a href="#" id="btnPriv" class="ui-state-default ui-corner-all">Non vedo bene</a>
         </td>
         <td style="text-align: right;">
           E-mail: <a class="pri" title="Manda una e-mail" href="mailto:info@commercioetico.it"><b>info@commercioetico.it</b></a><br />
