--- a/app/views/editorial/_tramenu_assos.html.erb
+++ b/app/views/editorial/_tramenu_assos.html.erb
@@ -4,7 +4,7 @@
 <%# end %>
 <p class="fs-tramenu-blockheader x-blue">Associazioni aderenti a Fiscosport</p>
 <div class="list_assos_carousel">
-  <ul id="carousel_assos_js">
+  <ul id="carousel_assos_js" class="hide">
 
     <li><img src="/images/banners/1.jpg" alt="basketball"/> <span> 1 didascalia 1 </span></li>
     <li><img src="/images/banners/2.jpg" alt="beachtree"/> <span> 2 didascalia 2 </span></li>
