--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -69,7 +69,6 @@
                   });
               });
           };
-
           $("#carousel_assos_js").carouFredSel({
               items				: 3,
               scroll : {
@@ -79,6 +78,7 @@
                   pauseOnHover	: true
               }
           });
+          $("#carousel_assos_js").removeClass("hide");
           // $("input[type=submit]").button();
 
           //Focus
