register select2 via ajax

--- a/app/views/users/_dati.html.erb
+++ b/app/views/users/_dati.html.erb
@@ -66,8 +66,8 @@
           <p><%= f.check_box :conferma_registrazione, :label => :field_conferma_registrazione  %> </p>
           <p><%= f.check_box :disabilitato, :label => :field_disabilitato  %> </p>
           <p><%= f.check_box :power_user, :label => :field_power_user  %> </p>
-          <p><%= f.check_box :forum_redattore, :label => :field_forum_redattore  %> </p>
-          <p><%= f.check_box :forum_notifica, :label => :field_forum_notifica  %> </p>
+          <p><%= f.check_box :se_condition, :label => :field_se_condition  %> </p>
+          <p><%= f.check_box :se_privacy, :label => :field_se_privacy  %> </p>
 
       </fieldset>
     </div>
