User tabs contents

--- a/app/views/users/_dati.html.erb
+++ b/app/views/users/_dati.html.erb
@@ -75,7 +75,7 @@
   <div style="clear:left;"></div>
   <!--[eoform:user]-->
 
-  <p><%= submit_tag l(:button_save) %></p>
+  <p><%= submit_tag l(:button_save_dati) %></p>
 <% end %>
 
 <%= wikitoolbar_for 'note' %>
