--- a/app/views/users/_fatture.html.erb
+++ b/app/views/users/_fatture.html.erb
@@ -40,7 +40,7 @@
   <div style="clear:left;"></div>
   <!--[eoform:user]-->
 
-  <p><%= submit_tag l(:button_save) %></p>
+  <p><%= submit_tag l(:button_save_fatture) %></p>
 <% end %>
 
 <%= wikitoolbar_for 'annotazioni' %>
