--- a/app/views/users/_abbonamento.html.erb
+++ b/app/views/users/_abbonamento.html.erb
@@ -1,4 +1,5 @@
-<% form_for @user, :url => { :action => 'edit_abbonamento', :id => @user}, :builder => TabularFormBuilder do |f| %>
+<% roles_fs = Role.all_fs %>
+<% remote_form_for(:user, :url => { :action => 'edit_abbonamento', :id => @user}, :builder => TabularFormBuilder, :html => {:method => :post}) do |f| %>
 
   <div id="edit_dati_form">
     <!--[form:user]-->
@@ -10,6 +11,12 @@
         <p><%= f.date_select :data, :label => :field_data %></p>
         <p><%= f.date_select :datascadenza, :label => :field_datascadenza %></p>
 
+        <p><label><%= l(:label_role) %></label><strong>
+        <% roles_fs.each do |role| %>
+          <%= radio_button_tag 'user[role_id]', role.id, (role.id == @user.role_id) %> <%=h role %>
+          <br />
+        <% end %>
+        </strong></p>
       </fieldset>
 
       <fieldset class="box tabular">
@@ -32,7 +39,7 @@
   <div style="clear:left;"></div>
   <!--[eoform:user]-->
 
-  <p><%= submit_tag l(:button_save) %></p>
+  <p><%= submit_tag l(:button_save_abbonamento) %></p>
 <% end %>
 
   #domthu20120916
