--- a/app/views/editorial/_articolo_full.html.erb
+++ b/app/views/editorial/_articolo_full.html.erb
@@ -69,7 +69,7 @@
         <div class="clearfix">&nbsp; <br/></div>
         <div class="fs-layout-cell layout-item-1">
           <div id="fs-articolo-full">
-            <%= textilizable(@articolo.description) %>
+            <%= raw(@articolo.description) %>
             <br/>
           </div>
         </div>
